# instrument-amdgpu-kernels

./: .gitignore  CMakeLists.txt  InstrumentationFunctions-hip-amdgcn-amd-amdhsa-gfx90a.bc  InstrumentationFunctions.cpp  LICENSE  MemTraceInstrumentationKernel.cpp  README.md  run.sh
DumpAMDGCNRegisters/: InjectionFunction.cpp  vectorAdd.cpp
InjectAMDGCNCacheLineCounter/: AMDGCNMemCoalescing.cpp  UnitTests.cpp
InjectAMDGCNFunction/: InjectionFunction.cpp
InjectAMDGCNInlineASM/: vectorAdd.cpp
InjectAMDGCNSharedMemTtrace/: InjectionFunction.cpp  readWriteBC.cpp
examples/: SharedMemReadWriteBC.cpp  sliding_window.cpp  stencils.cpp  vectorAdd.cpp
include/: AMDGCNMemCoalescing.h  AMDGCNMemTrace.h  AMDGCNMemTraceHip.h  AMDGCNNumCacheLines.h  AMDGCNSubmitAddressMessage.h  DumpAMDGCNRegisters.h  InjectAMDGCNFunction.h  InjectAMDGCNInlineASM.h  InjectAMDGCNSharedMemTtrace.h  utils.h
instrumentation/: InstrumentationFunctions.cpp  MemTraceInstrumentationKernel.cpp  NumCacheLinesInstrumentationKernel.cpp
lib/: AMDGCNBarrier.cpp  AMDGCNMemCoalescing.cpp  AMDGCNMemTrace.cpp  AMDGCNMemTraceHip.cpp  AMDGCNNumCacheLines.cpp  AMDGCNSubmitAddressMessages.cpp  CMakeLists.txt  DumpAMDGCNRegisters.cpp  InjectAMDGCNFunction.cpp  InjectAMDGCNInlineASM.cpp  InjectAMDGCNSharedMemTtrace.cpp
tests/: CMakeLists.txt  InstrumentationFunctions-hip-amdgcn-amd-amdhsa-gfx90a.bc  MemCoalescingTest.cpp  MemCoalescingTests.cpp
